--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${HOST}:${POSTG
 
 NEXTAUTH_URL="http://localhost:3000"
 
-# on linux and mac use `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+# use `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 NEXTAUTH_SECRET=
 
 # https://docs.github.com/en/developers/apps/building-oauth-apps/creating-an-oauth-app
